// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches data correctly for "GET" request 1`] = `
Object {
  "message": "Mocked data for fetchData \\"GET\\" request",
  "status": 200,
}
`;

exports[`fetches data correctly for "POST" request 1`] = `
Object {
  "message": "Mocked data for fetchData \\"POST\\" request",
  "status": 200,
}
`;

exports[`fetches data correctly when no method is provided 1`] = `
Object {
  "message": "Mocked data for fetchData \\"GET\\" request",
  "status": 200,
}
`;

exports[`returns error object when request fails 1`] = `
Object {
  "error": true,
  "status": 500,
}
`;
